--- a/personality/cinder/templates/cinder.templ
+++ b/personality/cinder/templates/cinder.templ
@@ -261,7 +261,7 @@ api_paste_config=/etc/cinder/api-paste.ini
 my_ip=HOST_IP
 
 # default glance hostname or ip (string value)
-glance_host=GLANCE_HOSTNAME
+glance_host=GLANCE_HOST
 
 # default glance port (integer value)
 #glance_port=9292
