--- a/personality/glance/templates/glance-registry.templ
+++ b/personality/glance/templates/glance-registry.templ
@@ -81,9 +81,9 @@ limit_param_default = 25
 #ca_file = /path/to/cafile
 
 [keystone_authtoken]
-auth_host=KEYSTONE_HOSTNAME
+auth_host=KEYSTONE_HOST
 auth_port=35357
-auth_protocol=http
+auth_protocol=KEYSTONE_PROTOCOL
 admin_tenant_name=GLANCE_KEYSTONE_TENANT
 admin_user=GLANCE_KEYSTONE_USER
 admin_password=GLANCE_KEYSTONE_PASSWORD
