--- a/personality/neutron/templates/neutron.templ
+++ b/personality/neutron/templates/neutron.templ
@@ -1,9 +1,9 @@
 [DEFAULT]
-# Default log level is INFO
-# verbose and debug has the same result.
-# One of them will set DEBUG log level output
-# debug = False
+# Print more verbose output (set logging level to INFO instead of default WARNING level).
 # verbose = True
+
+# Print debugging output (set logging level to DEBUG instead of default WARNING level).
+# debug = False
 
 # Where to store Neutron state files.  This directory must be writable by the
 # user executing the agent.
@@ -25,13 +25,13 @@
 # use_syslog = False
 # syslog_log_facility = LOG_USER
 
-# use_stderr = True
+# use_stderr = False
 # log_file =
 # log_dir =
 
 # publish_errors = False
 
-# Address to bind the API server
+# Address to bind the API server to
 # bind_host = 0.0.0.0
 
 # Port the bind the API server to
@@ -44,21 +44,33 @@
 # extensions are in there you don't need to specify them here
 # api_extensions_path =
 
-# Neutron plugin provider module
-core_plugin = neutron.plugins.openvswitch.ovs_neutron_plugin.OVSNeutronPluginV2
+# (StrOpt) Neutron core plugin entrypoint to be loaded from the
+# neutron.core_plugins namespace. See setup.cfg for the entrypoint names of the
+# plugins included in the neutron source distribution. For compatibility with
+# previous versions, the class name of a plugin can be specified instead of its
+# entrypoint name.
+#
+core_plugin = ml2
+# Example: core_plugin = ml2
 
-# Advanced service modules
-# service_plugins =
+# (ListOpt) List of service plugin entrypoints to be loaded from the
+# neutron.service_plugins namespace. See setup.cfg for the entrypoint names of
+# the plugins included in the neutron source distribution. For compatibility
+# with previous versions, the class name of a plugin can be specified instead
+# of its entrypoint name.
+#
+service_plugins = router
+# Example: service_plugins = router,firewall,lbaas,vpnaas,metering
 
 # Paste configuration file
 api_paste_config = /etc/neutron/api-paste.ini
 
 # The strategy to be used for auth.
 # Supported values are 'keystone'(default), 'noauth'.
-# auth_strategy = noauth
+auth_strategy = keystone
 
 # Base MAC address. The first 3 octets will remain unchanged. If the
-# 4h octet is not 00, it will also used. The others will be
+# 4h octet is not 00, it will also be used. The others will be
 # randomly generated.
 # 3 octet
 # base_mac = fa:16:3e:00:00:00
@@ -85,7 +97,7 @@ api_paste_config = /etc/neutron/api-paste.ini
 # being used in conjunction with nova security groups
 # allow_overlapping_ips = True
 # Ensure that configured gateway is on subnet
-# force_gateway_on_subnet = False
+# force_gateway_on_subnet = True
 
 
 # RPC configuration options. Defined in rpc __init__
@@ -116,7 +128,7 @@ rpc_backend = neutron.openstack.common.rpc.impl_kombu
 # kombu_ssl_keyfile =
 # SSL cert file (valid only if SSL enabled)
 # kombu_ssl_certfile =
-# SSL certification authority file (valid only if SSL enabled)'
+# SSL certification authority file (valid only if SSL enabled)
 # kombu_ssl_ca_certs =
 # IP address of the RabbitMQ installation
 rabbit_host = RABBIT_HOST
@@ -136,7 +148,7 @@ rabbit_userid = RABBIT_USER
 # rabbit_max_retries = 0
 # RabbitMQ connection retry interval
 # rabbit_retry_interval = 1
-# Use HA queues in RabbitMQ (x-ha-policy: all).You need to
+# Use HA queues in RabbitMQ (x-ha-policy: all). You need to
 # wipe RabbitMQ database when changing this option. (boolean value)
 # rabbit_ha_queues = false
 
@@ -170,7 +182,7 @@ rabbit_userid = RABBIT_USER
 
 # ============ Notification System Options =====================
 
-# Notifications can be sent when network/subnet/port are create, updated or deleted.
+# Notifications can be sent when network/subnet/port are created, updated or deleted.
 # There are three methods of sending notifications: logging (via the
 # log_file directive), rpc (via a message queue) and
 # noop (no notifications sent, the default)
@@ -180,7 +192,7 @@ rabbit_userid = RABBIT_USER
 # notification_driver = neutron.openstack.common.notifier.no_op_notifier
 # Logging driver
 # notification_driver = neutron.openstack.common.notifier.log_notifier
-# RPC driver. DHCP agents needs it.
+# RPC driver.
 # notification_driver = neutron.openstack.common.notifier.rpc_notifier
 
 # default_notification_level is used to form actual topic name(s) or to set logging level
@@ -196,7 +208,7 @@ rabbit_userid = RABBIT_USER
 
 # Default maximum number of items returned in a single response,
 # value == infinite and value < 0 means no max limit, and value must
-# greater than 0. If the number of items requested is greater than
+# be greater than 0. If the number of items requested is greater than
 # pagination_max_limit, server will just return pagination_max_limit
 # of number of items.
 # pagination_max_limit = -1
@@ -213,7 +225,7 @@ rabbit_userid = RABBIT_USER
 # =========== items for agent management extension =============
 # Seconds to regard the agent as down; should be at least twice
 # report_interval, to be sure the agent is down for good
-# agent_down_time = 9
+# agent_down_time = 75
 # ===========  end of items for agent management extension =====
 
 # =========== items for agent scheduler extension =============
@@ -244,6 +256,14 @@ rabbit_userid = RABBIT_USER
 # worker thread in the current process.  Greater than 0 launches that number of
 # child processes as workers.  The parent process manages them.
 # api_workers = 0
+
+# Number of separate RPC worker processes to spawn.  The default, 0, runs the
+# worker thread in the current process.  Greater than 0 launches that number of
+# child processes as RPC workers.  The parent process manages them.
+# This feature is experimental until issues are addressed and testing has been
+# enabled for various plugins for compatibility.
+# rpc_workers = 0
+
 # Sets the value of TCP_KEEPIDLE in seconds to use for each server socket when
 # starting API server. Not supported on OS X.
 # tcp_keepidle = 600
@@ -253,6 +273,9 @@ rabbit_userid = RABBIT_USER
 
 # Number of backlog requests to configure the socket with.
 # backlog = 4096
+
+# Max header line to accommodate large tokens
+# max_header_line = 16384
 
 # Enable SSL on the API server
 # use_ssl = False
@@ -270,47 +293,107 @@ rabbit_userid = RABBIT_USER
 # ssl_ca_file = /path/to/cafile
 # ======== end of WSGI parameters related to the API server ==========
 
+
+# ======== neutron nova interactions ==========
+# Send notification to nova when port status is active.
+notify_nova_on_port_status_changes = True
+
+# Send notifications to nova when port data (fixed_ips/floatingips) change
+# so nova can update it's cache.
+notify_nova_on_port_data_changes = True 
+
+# URL for connection to nova (Only supports one nova region currently).
+nova_url = NOVA_URL 
+
+# Name of nova region to use. Useful if keystone manages more than one region
+# nova_region_name =
+
+# Username for connection to nova in admin context
+nova_admin_username = NOVA_ADMIN_USERNAME
+
+# The uuid of the admin nova tenant
+nova_admin_tenant_id = NOVA_ADMIN_TENANT
+
+# Password for connection to nova in admin context.
+nova_admin_password = NOVA_ADMIN_PASSWORD
+
+# Authorization URL for connection to nova in admin context.
+nova_admin_auth_url = NOVA_ADMIN_AUTH_URL
+
+# Number of seconds between sending events to nova if there are any events to send
+# send_events_interval = 2
+
+# ======== end of neutron nova interactions ==========
+
 [quotas]
-# resource name(s) that are supported in quota features
+# Default driver to use for quota checks
+# quota_driver = neutron.db.quota_db.DbQuotaDriver
+
+# Resource name(s) that are supported in quota features
 # quota_items = network,subnet,port
 
-# default number of resource allowed per tenant, minus for unlimited
+# Default number of resource allowed per tenant. A negative value means
+# unlimited.
 # default_quota = -1
 
-# number of networks allowed per tenant, and minus means unlimited
+# Number of networks allowed per tenant. A negative value means unlimited.
 # quota_network = 10
 
-# number of subnets allowed per tenant, and minus means unlimited
+# Number of subnets allowed per tenant. A negative value means unlimited.
 # quota_subnet = 10
 
-# number of ports allowed per tenant, and minus means unlimited
+# Number of ports allowed per tenant. A negative value means unlimited.
 # quota_port = 50
 
-# number of security groups allowed per tenant, and minus means unlimited
+# Number of security groups allowed per tenant. A negative value means
+# unlimited.
 # quota_security_group = 10
 
-# number of security group rules allowed per tenant, and minus means unlimited
+# Number of security group rules allowed per tenant. A negative value means
+# unlimited.
 # quota_security_group_rule = 100
 
-# default driver to use for quota checks
-# quota_driver = neutron.db.quota_db.DbQuotaDriver
+# Number of vips allowed per tenant. A negative value means unlimited.
+# quota_vip = 10
+
+# Number of pools allowed per tenant. A negative value means unlimited.
+# quota_pool = 10
+
+# Number of pool members allowed per tenant. A negative value means unlimited.
+# The default is unlimited because a member is not a real resource consumer
+# on Openstack. However, on back-end, a member is a resource consumer
+# and that is the reason why quota is possible.
+# quota_member = -1
+
+# Number of health monitors allowed per tenant. A negative value means
+# unlimited.
+# The default is unlimited because a health monitor is not a real resource
+# consumer on Openstack. However, on back-end, a member is a resource consumer
+# and that is the reason why quota is possible.
+# quota_health_monitors = -1
+
+# Number of routers allowed per tenant. A negative value means unlimited.
+# quota_router = 10
+
+# Number of floating IPs allowed per tenant. A negative value means unlimited.
+# quota_floatingip = 50
 
 [agent]
 # Use "sudo neutron-rootwrap /etc/neutron/rootwrap.conf" to use the real
 # root filter facility.
 # Change to "sudo" to skip the filtering and just run the comand directly
-root_helper = sudo neutron-rootwrap /etc/neutron/rootwrap.conf
+root_helper = sudo /usr/bin/neutron-rootwrap /etc/neutron/rootwrap.conf
 
 # =========== items for agent management extension =============
 # seconds between nodes reporting state to server; should be less than
 # agent_down_time, best if it is half or less than agent_down_time
-# report_interval = 4
+# report_interval = 30
 
 # ===========  end of items for agent management extension =====
 
 [keystone_authtoken]
 auth_host = KEYSTONE_HOST
-# auth_port = 35357
+auth_port = 35357
 auth_protocol = KEYSTONE_PROTOCOL
 admin_tenant_name = NEUTRON_KEYSTONE_TENANT
 admin_user = NEUTRON_KEYSTONE_USER
@@ -322,7 +405,6 @@ admin_password = NEUTRON_KEYSTONE_PASSWORD
 # connection = mysql://root:pass@127.0.0.1:3306/neutron
 # Replace 127.0.0.1 above with the IP address of the database used by the
 # main neutron server. (Leave it as is if the database runs on this host.)
-# connection = sqlite://
 connection = SQL_CONNECTION
 
 # The SQLAlchemy connection string used to connect to the slave database
@@ -361,11 +443,22 @@ connection = SQL_CONNECTION
 # Specify service providers (drivers) for advanced services like loadbalancer, VPN, Firewall.
 # Must be in form:
 # service_provider=<service_type>:<name>:<driver>[:default]
-# List of allowed service type include LOADBALANCER, FIREWALL, VPN
+# List of allowed service types includes LOADBALANCER, FIREWALL, VPN
 # Combination of <service type> and <name> must be unique; <driver> must also be unique
-# this is multiline option, example for default provider:
+# This is multiline option, example for default provider:
 # service_provider=LOADBALANCER:name:lbaas_plugin_driver_path:default
 # example of non-default provider:
 # service_provider=FIREWALL:name2:firewall_driver_path
 # --- Reference implementations ---
-# service_provider = LOADBALANCER:Haproxy:neutron.services.loadbalancer.drivers.haproxy.plugin_driver.HaproxyOnHostPluginDriver:default
+service_provider=LOADBALANCER:Haproxy:neutron.services.loadbalancer.drivers.haproxy.plugin_driver.HaproxyOnHostPluginDriver:default
+service_provider=VPN:openswan:neutron.services.vpn.service_drivers.ipsec.IPsecVPNDriver:default
+# In order to activate Radware's lbaas driver you need to uncomment the next line.
+# If you want to keep the HA Proxy as the default lbaas driver, remove the attribute default from the line below.
+# Otherwise comment the HA Proxy line
+# service_provider = LOADBALANCER:Radware:neutron.services.loadbalancer.drivers.radware.driver.LoadBalancerDriver:default
+# uncomment the following line to make the 'netscaler' LBaaS provider available.
+# service_provider=LOADBALANCER:NetScaler:neutron.services.loadbalancer.drivers.netscaler.netscaler_driver.NetScalerPluginDriver
+# Uncomment the following line (and comment out the OpenSwan VPN line) to enable Cisco's VPN driver.
+# service_provider=VPN:cisco:neutron.services.vpn.service_drivers.cisco_ipsec.CiscoCsrIPsecVPNDriver:default
+# Uncomment the line below to use Embrane heleos as Load Balancer service provider.
+# service_provider=LOADBALANCER:Embrane:neutron.services.loadbalancer.drivers.embrane.driver.EmbraneLbaas:default
