--- a/personality/nova/templates/nova.templ
+++ b/personality/nova/templates/nova.templ
@@ -2082,7 +2082,7 @@ vncserver_proxyclient_address=VNCSERVER_PROXYCLIENT_ADDRESS
 # Info to match when looking for cinder in the service
 # catalog. Format is: separated values of the form:
 # <service_type>:<service_name>:<endpoint_type> (string value)
-cinder_catalog_info=volume:cinder:inernalURL
+cinder_catalog_info=volume:cinder:internalURL
 
 # Override service catalog lookup with template for cinder
 # endpoint e.g. http://localhost:8776/v1/%(project_id)s
