Add ability to set allocation ratio

--- a/personality/nova/templates/nova.templ
+++ b/personality/nova/templates/nova.templ
@@ -1757,7 +1757,7 @@ security_group_api=neutron
 # for CoreFilter. For AggregateCoreFilter, it will fall back
 # to this configuration value if no per-aggregate setting
 # found. (floating point value)
-#cpu_allocation_ratio=16.0
+cpu_allocation_ratio=CPU_ALLOCATION_RATIO
 
 
 #
@@ -1810,7 +1810,7 @@ security_group_api=neutron
 # for RamFilter. For AggregateRamFilter, it will fall back to
 # this configuration value if no per-aggregate setting found.
 # (floating point value)
-#ram_allocation_ratio=1.5
+ram_allocation_ratio=RAM_ALLOCATION_RATIO
 
 
 #
