add memcache to horizon local_settings tt

--- a/features/dashboard/metaconfig/django-horizon.tt
+++ b/features/dashboard/metaconfig/django-horizon.tt
@@ -34,7 +34,7 @@ SECRET_KEY='[% secret_key %]'
 CACHES = {
     'default': {
          'BACKEND': 'django.core.cache.backends.memcached.MemcachedCache',
-         'LOCATION': '127.0.0.1:11211',
+         'LOCATION': '[% memcacheservers %]',
     }
 }
 
