--- a/features/dashboard/metaconfig/django-horizon.tt
+++ b/features/dashboard/metaconfig/django-horizon.tt
@@ -65,7 +65,7 @@ OPENSTACK_NEUTRON_NETWORK = {
     'enable_router': True,
     'enable_quotas': True,
     'enable_ipv6': True,
-    'enable_distributed_router': False,
+    'enable_distributed_router': [% enable_distributed_router %],
     'enable_ha_router': False,
     'enable_lb': True,
     'enable_firewall': True,
