--- a/features/dashboard/metaconfig/django-horizon.tt
+++ b/features/dashboard/metaconfig/django-horizon.tt
@@ -54,7 +54,7 @@ OPENSTACK_KEYSTONE_BACKEND = {
 OPENSTACK_HYPERVISOR_FEATURES = {
     'can_set_mount_point': False,
     'can_set_password': False,
-    'requires_keypair': [% openstack_hypervisor_features/requires_keypair %],
+    'requires_keypair': [% openstack_hypervisor_features.requires_keypair %],
 }
 
 OPENSTACK_CINDER_FEATURES = {
@@ -62,7 +62,7 @@ OPENSTACK_CINDER_FEATURES = {
 }
 
 LAUNCH_INSTANCE_DEFAULTS = {
-    'config_drive' : [% launch_instance_defaults/enable_config_drive %]
+    'config_drive' : [% launch_instance_defaults.enable_config_drive %]
 }
 
 OPENSTACK_NEUTRON_NETWORK = {
