--- a/features/dashboard/metaconfig/django-horizon.tt
+++ b/features/dashboard/metaconfig/django-horizon.tt
@@ -52,7 +52,8 @@ SECRET_KEY='[% secret_key %]'
 CACHES = {
     'default': {
          'BACKEND': 'django.core.cache.backends.memcached.MemcachedCache',
-         'LOCATION': '[% memcacheservers %]',
+         'LOCATION': [ '[% memcacheservers %]' ],
+
     }
 }
 
