--- a/features/httpd/metaconfig/wsgi-keystone.tt
+++ b/features/httpd/metaconfig/wsgi-keystone.tt
@@ -10,9 +10,7 @@ Listen [% port %]
     WSGIScriptAlias / [% vhost.script %]
     WSGIApplicationGroup %{GLOBAL}
     WSGIPassAuthorization On
-    <IfVersion >= 2.4>
-      ErrorLogFormat "%{cu}t %M"
-    </IfVersion>
+    ErrorLogFormat "%{cu}t %M"
 
     [% IF vhost.ssl.defined %]
     [% FOREACH item IN vhost.ssl.pairs -%]
@@ -25,14 +23,28 @@ Listen [% port %]
     CustomLog /var/log/httpd/keystone-access.log combined
 
     <Directory /usr/bin>
-        <IfVersion >= 2.4>
-            Require all granted
-        </IfVersion>
-        <IfVersion < 2.4>
-            Order allow,deny
-            Allow from all
-        </IfVersion>
+        Require all granted
     </Directory>
 </VirtualHost>
 
 [%- END -%]
+
+Alias /identity /usr/bin/keystone-wsgi-public
+<Location /identity>
+    SetHandler wsgi-script
+    Options +ExecCGI
+
+    WSGIProcessGroup keystone-public
+    WSGIApplicationGroup %{GLOBAL}
+    WSGIPassAuthorization On
+</Location>
+
+Alias /identity_admin /usr/bin/keystone-wsgi-admin
+<Location /identity_admin>
+    SetHandler wsgi-script
+    Options +ExecCGI
+
+    WSGIProcessGroup keystone-admin
+    WSGIApplicationGroup %{GLOBAL}
+    WSGIPassAuthorization On
+</Location>
